# lantube

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  README.zh.md  config.example.toml  go.mod  go.sum  main.go
frontend/: .gitignore  README.md  index.html  package.json  vite.config.ts  vue.config.js
frontend/src/: App.vue  main.js  main.ts  router.js  router.ts
frontend/src/api/: index.ts
frontend/src/lang/: en.js  en.ts  zh.js  zh.ts
frontend/src/views/: Explorer.vue  Home.vue  Setting.vue  Videos.vue
src/: error.rs  main.rs
