[package]
name = "lantube"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["tokio", "http2", "multipart"] }
tokio = { version = "1.37", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
anyhow = "1.0"
toml = "0.8"